fix txt align

--- a/_sass/minima/_layout.sass
+++ b/_sass/minima/_layout.sass
@@ -226,6 +226,10 @@ body
 .post-content
   margin-bottom: $spacing-unit
 
+  p
+    +media-query($on-palm)
+      text-align: justify
+
   h2
     +relative-font-size(2)
     margin-top: 30px
